@@ -1,3 +1,8 @@
+2009-09-23  Piotr Fusik  <fox@scene.pl>
+* win32/wasap/wasap.c: when opening file from the Explorer, close only error
+  messages, not file information
+
+
 2009-09-22  Piotr Fusik  <fox@scene.pl>
 * java/ASAPApplet.java: ignore leading hash in colors
 
@@ -5,7 +10,7 @@
 2009-09-21  Piotr Fusik  <fox@scene.pl>
 * java/ASAP.ppjava, java/ASAPApplet.java, java/USAGE: changed applet interface
 
-* win32/wasap/wasap.exe: close the open dialog or error message when opening
+* win32/wasap/wasap.c: close the open dialog or error message when opening
   file from the Explorer. Dragging a corrupted file to wasap.exe ten times
   caused a crash (reported by Ramos).
 
